tests/compiler/jsxArbitraryExprInAttribute/index.tsx
<Foo bar=bar() />
//~^ ERROR: '{' or JSX element expected.